added CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,3 +198,9 @@ add_executable(light src/lights.cpp)
 target_link_libraries(light ${catkin_LIBRARIES})
 add_executable(turn src/turns.cpp)
 target_link_libraries(turn ${catkin_LIBRARIES})
+add_executable(Car src/Car.cpp)
+target_link_libraries(Car ${catkin_LIBRARIES})
+add_executable(Model src/Model.cpp)
+target_link_libraries(Model ${catkin_LIBRARIES})
+add_executable(MapOfCity src/MapOfCity.cpp)
+target_link_libraries(MapOfCity ${catkin_LIBRARIES})
