--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  message_generation
+  genmsg
 )
 
 ## System dependencies are found with CMake's conventions
@@ -44,11 +46,16 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+ add_message_files(
+   DIRECTORY
+   FILES
+   car.msg
+   lightsVector.msg
+   light.msg
+   turn.msg
+   turnsVector.msg
+   mapMessage.msg
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -65,10 +72,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   std_msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -186,3 +193,14 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(light src/lights.cpp)
+target_link_libraries(light ${catkin_LIBRARIES})
+add_executable(turn src/turns.cpp)
+target_link_libraries(turn ${catkin_LIBRARIES})
+add_executable(Car src/Car.cpp)
+target_link_libraries(Car ${catkin_LIBRARIES})
+add_executable(Model src/Model.cpp)
+target_link_libraries(Model ${catkin_LIBRARIES})
+add_executable(MapOfCity src/MapOfCity.cpp)
+target_link_libraries(MapOfCity ${catkin_LIBRARIES})
